--- a/SimpleApp/app/src/main/res/values/strings.xml
+++ b/SimpleApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">SimpleApp</string>
+    <string name="app_name">Instagram App</string>
+    <string name="instagram_authorize_failure">Instagram auth failure</string>
+    <string name="logout">Logout</string>
+    <string name="following">following</string>
+    <string name="followers">followers</string>
+    <string name="posts">posts</string>
+    <string name="heart">M25.119,2.564c12.434,0.023,18.68,5.892,24.88,17.612  c6.2-11.721,12.446-17.589,24.877-17.612c13.81-0.025,25.035,10.575,25.061,23.66c0.033,23.708-24.952,47.46-49.938,71.212  C25.016,73.685,0.03,49.932,0.064,26.224C0.085,13.14,11.309,2.539,25.119,2.564z</string>
+    <string name="number_of_likes">%d likes</string>
+    <string name="number_of_likes_singular">1 like</string>
+
 </resources>
